--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "freelancing",
-  "version": "0.1.0",
+  "name": "shivay-finance",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint",
+    "analyze": "ANALYZE=true next build",
+    "postbuild": "next-sitemap",
+    "postinstall": "next-sitemap"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -15,13 +18,13 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
-    "@tabler/icons-react": "^3.35.0",
+    "@tabler/icons-react": "^3.36.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.25",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.555.0",
-    "motion": "^12.23.25",
     "next": "16.0.7",
+    "next-seo": "^6.7.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
@@ -35,8 +38,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
+    "next-sitemap": "^4.2.3",
+    "postcss": "^8.4.35",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
